--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@ body{
     top: 0;
     left: 0;
     margin: 0;
+    background-color: rgba(0, 0, 0, 0.808);
 }
 
 .corpo{
@@ -30,6 +31,10 @@ body{
     width: 380px;
     background-color: rgba(0, 0, 255, 0.596);
     border-radius: 10px 10px 0px 0px;
+    color: white;
+    text-align: right;
+    font-family: var(--calculdora);
+    font-size: 2em;
 }
 
 .tecla{
